--- a/service.css
+++ b/service.css
@@ -1,6 +1,7 @@
 :root {
    --army-green: #596D48;
-   --off-white: rgb(244, 252, 252);
+   --off-white: rgb(252, 252, 244);
+   --box-shadow: rgb(128, 128, 128);
 
 }
 
@@ -29,9 +30,18 @@
    background-color: var(--off-white);
 }
 
+#divForm {
+   box-shadow: 0px 5px 3px -3px var(--box-shadow);
+}
+
+#bottom-section {
+   margin-top: 20px;
+}
+
 form .grid .column label {
    width: 800px;
-   color: var(--army-green);
+   /*color: var(--army-green);*/
+   font-size: 0.6em;
 }
 
 
@@ -44,7 +54,10 @@ form .grid {
 }
 
 form .grid .column input {
+   border-color: pink;
    border-color: #E5E7EB;
+   border-style: solid;
+   border-radius: 5px;
 }
 
 zform .grid .column {
@@ -59,7 +72,7 @@ button {
    font-weight: bold;
    background-color: var(--army-green);
    padding: 10px 25px;
-   border-radius: 0%;
+   border-radius: 5px;
 }
 
 a {
@@ -70,4 +83,8 @@ a {
 
 #divForm {
    background-color: white;
+}
+
+#credits {
+   font: 10px "norsebold";
 }
